<feat>: Add validator validation and translation
- Use validator to validate request data in request handling functions to ensue data  correctness
- Add translator to translate error message into user-friendly language to improve the user experience.
- To implement this feature, we store `uni,v` in the Gin's context at the `router.go` init
The implementation was inspired by `https://github.com/go-playground/validator/issues/286#issuecomment-308617838.`
`https://github.com/eddycjy/go-programming-tour-book-comments/issues/5#issuecomment-1106424554`

Refs #4
