# internal/routers/api/v1/tag.go
@@ -1,7 +1,14 @@
 // tag 标签管理
 package v1
 
-import "github.com/gin-gonic/gin"
+import (
+	"github.com/lc-1010/OneBlogService/pkg/app"
+
+	"github.com/gin-gonic/gin"
+	"github.com/lc-1010/OneBlogService/global"
+	"github.com/lc-1010/OneBlogService/internal/service"
+	"github.com/lc-1010/OneBlogService/pkg/errcode"
+)
 
 type Tag struct{}
 
@@ -15,11 +22,22 @@ func NewTag() Tag {
 // @Param state query int false "状态" Enums(0,1) default(1)
 // @Param page query int false "页码"
 // @Param paage_size query int false "每页数量"
-// @Success 200 {object} model.BlogTag "成功"
+// @Success 200 {object} model.TagSwagger  "成功"
 // @Failure 400 {object} errcode.Error "请求错误"
 // @Failure 500 {object} errcode.Error "请求错误"
 // @Router /api/v1/tags [get]
-func (t Tag) List(c *gin.Context) {}
+func (t Tag) List(c *gin.Context) {
+	response := app.NewResponse(c)
+	// 绑定参数进行校验
+	valid, errs := app.BindAndValid(c, &service.TagListRequest{})
+	if !valid {
+		global.Logger.Errorf(c, "app.BindAndValid errs: %v", errs)
+		e := errcode.InvalidParams.WithDetails(errs.Errors()...)
+		response.ToErrorResponse(e)
+		return
+	}
+	response.ToResponse(gin.H{})
+}
 
 // @Summary 创建标签
 // @Produce json
@@ -30,7 +48,9 @@ func (t Tag) List(c *gin.Context) {}
 // @Failure 400 {object} errcode.Error "请求错误"
 // @Failure 500 {object} errcode.Error "请求错误"
 // @Router /api/v1/tags [post]
-func (t Tag) Create(c *gin.Context) {}
+func (t Tag) Create(c *gin.Context) {
+
+}
 
 // @Summary 更新标签
 // @Produce json
